axion-database/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: dev
spec:
  selector:
    app: database-deployment
  ports:
    - port: 9090
      targetPort: 5432
  type: ClusterIP
